--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,3 +15,15 @@ deploy-dev:
     - aws s3 sync dbt_airflow_factory  s3://kitopi-mwaa-dag-mwaa-dev/v2/dags/dbt_airflow_factory_fork --include "*.py"  --acl bucket-owner-full-control --delete
 
   # when: manual
+
+deploy-prod:
+  stage: deploy-prod
+  variables:
+    DEPLOY_ENV: PROD
+
+  script:
+    - find dbt_airflow_factory -name '*.py' -exec sed -i 's/from dbt_airflow_factory./from dbt_airflow_factory_fork./g' {} \;
+    - aws s3 sync dbt_airflow_factory  s3://kitopi-mwaa-dag-mwaa-prod/v2/dags/dbt_airflow_factory_fork --include "*.py"  --acl bucket-owner-full-control --delete
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master"
+      when: manual
