feat: #DE-4143 - airflow update

--- a/tests/config/base/k8s.yml
+++ b/tests/config/base/k8s.yml
@@ -15,7 +15,7 @@ annotations:
 is_delete_operator_pod: True
 
 resources:
-  node_selectors:
+  node_selector:
     group: data-processing
   tolerations:
     - key: group
