--- a/tests/config/airbyte_dev/airflow_seed_enabled.yml
+++ b/tests/config/airbyte_dev/airflow_seed_enabled.yml
@@ -11,10 +11,10 @@ default_args:
   retry_delay: 5m
 
 dag:
-  dag_id: dbt-platform-poc
-  description: 'Experimental snadbox data platform DAG'
-  schedule_interval: '0 12 * * *'
-  catchup: False
+  - dag_id: dbt-platform-poc
+    description: 'Experimental snadbox data platform DAG'
+    schedule_interval: '0 12 * * *'
+    catchup: False
 
 seed_task: True
 manifest_file_name: ../tests/manifest.json
